# RustyTrader

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/core/: candle.rs  instrument.rs  mod.rs  strategy.rs  utils.rs
src/engine/: backtest.rs
src/tests/: CL_5min.txt
