[package]
name = "RustyTrader"
version = "0.1.0"
edition = "2021"
authors = ["Siddharth Singh"]
description = "RustyTrader is a Rust library for backtesting trading strategies. It is designed to be simple to use for a single stock or contracts."
license = "MIT"
repository = "https://github.com/siddharthqs/RustyTrader"
readme = "README.md"
homepage = "https://github.com/siddharthqs/RustyTrader"
keywords = [
    "finance",
    "trading",
    "backtesting",
    "algorithmic-trading",
    "library"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
chrono = "0.4.35"
csv = "1.3.0"
polars = "0.38.0"